Ideas. Copy Paste

--- a/projects/project01.json
+++ b/projects/project01.json
@@ -28,7 +28,7 @@
 },
 
 
-"altObject": { //or just put them inside objects and give them type=alt ?
+"ideas": { //or just put them inside objects and give them type=alt ?
 }
 }
 
