Further progress on authentication. Login partially working

--- a/app/restapi.ini
+++ b/app/restapi.ini
@@ -5,9 +5,9 @@ baseURL = "/app"
 type = "mysql"
 ;type = "postgresql"
 server = "localhost"
-database = "oneyeari_fluidiaDev"
-username = "oneyeari_fluidev"
-password = "fmysql1"
+database = ""
+username = ""
+password = ""
 foreignKeyPostfix = "_id"
 
 [renderers]
@@ -20,3 +20,4 @@ text/json = json.php
 xml = text/xml
 txt = text/plain
 html = text/html
+json = text/json
