Semi Working functions for (login,logged_in,logout,email_exists,register)

--- a/app/restapi.ini
+++ b/app/restapi.ini
@@ -5,9 +5,9 @@ baseURL = "/app"
 type = "mysql"
 ;type = "postgresql"
 server = "localhost"
-database = "oneyeari_fluidiaDev"
-username = "oneyeari_fluidev"
-password = "fmysql1"
+database = "fluidia"
+username = "username"
+password = "password"
 foreignKeyPostfix = "_id"
 
 [renderers]
