--- a/app/restapi.ini
+++ b/app/restapi.ini
@@ -5,9 +5,9 @@ baseURL = "/app"
 type = "mysql"
 ;type = "postgresql"
 server = "localhost"
-database = "fluidia"
-username = "username"
-password = "password"
+database = "oneyeari_fluidiaDev"
+username = "oneyeari_fluidev"
+password = "fmysql1"
 foreignKeyPostfix = "_id"
 
 [renderers]
