--- a/projects/project01.json
+++ b/projects/project01.json
@@ -1,17 +1,12 @@
 {
-//project data
 "project": {},
 
-//experience threads
 "threads" : { 
 },
 
-
-//non instance elemenets
-"elements" : { //hotspots, text, images, form elements?
+"elements" : { 
 },
 
-// instances
 "instances" : {
 	
 },
@@ -22,7 +17,7 @@
 	"page1" : { 
 		"pageName" : "Page 1",
 		"author" : "",
-		"contains" : {  } //TODO 0 or 1s for display or not (content manager)
+		"contains" : {  } 
 	}
 },
 
@@ -33,7 +28,7 @@
 },
 
 
-"ideas": { //or just put them inside objects and give them type=alt ?
+"ideas": { 
 }
 }
 
